--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,22 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
     implementation 'org.apache.commons:commons-dbcp2:2.7.0'
 
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
+    compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.2'
+    compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
+
+    compile 'org.hibernate:hibernate-core:5.4.22.Final'
+    implementation 'org.hibernate:hibernate-core:5.4.22.Final'
+
+    
+
+
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+
+
+
+
 
 }
