--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+
+    runtime files('src/main/config')
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     implementation 'org.jetbrains:annotations:19.0.0'
