--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+
 }
 
 group 'org.example'
@@ -9,33 +10,27 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
 
-    runtime files('src/main/config')
-
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-
     implementation 'org.jetbrains:annotations:19.0.0'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
     implementation 'com.google.guava:guava:26.0-jre'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
     implementation 'org.apache.commons:commons-dbcp2:2.7.0'
 
-    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
-    compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.2'
-    compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
+    implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.2'
+    implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
 
-    compile 'org.hibernate:hibernate-core:5.4.22.Final'
+    implementation 'org.hibernate:hibernate-core:5.4.22.Final'
     implementation 'org.hibernate:hibernate-core:5.4.22.Final'
 
-    dependencies {
-        implementation 'com.google.code.gson:gson:2.8.6'
-    }
-
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
 }
+
+task runApp(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = project.hasProperty("mainClass") ? project.getProperty("mainClass") : "moscow.exchange.Main"
+}
+
